# saedemo

./: server.py
backend/: CMakeLists.txt
backend/src/: CMakeLists.txt  aminer.hpp  aminerdata.cpp  aminerimporter.cpp  interface.proto  main.cpp  pminer.hpp  pminerimporter.cpp  search.cpp  search.hpp
frontend/: search.tpl  server.py
frontend/dcclient/: dcclient.py
frontend/saeclient/: interface_pb2.py  saeclient.py
